project/log/20250610_115132.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:35:8: error: no member named 'normal' in 'PixelShaderOutput'
output.normal = normalize(mul(input.normal,(float32_t3x3)gTransformationMatrix.World));
~~~~~~ ^
object3D.PS.hlsl:35:58: error: use of undeclared identifier 'gTransformationMatrix'
output.normal = normalize(mul(input.normal,(float32_t3x3)gTransformationMatrix.World));
                                                         ^

